force-app/main/default/objects/Add_Quote__mdt/Add_Quote__mdt.object-meta.xml
<CustomObject>
    <label>Add Quote Button Visibility based on UCC</label>
    <pluralLabel>Add Quote Button Visibility based on UCC</pluralLabel>
</CustomObject>