force-app/main/default/objects/Add_Quote__mdt/fields/Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Button_Name__c</fullName>
    <label>Button Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>