force-app/main/default/objects/Add_Quote__mdt/fields/isCPQ_Active_User_c__c.field-meta.xml
<CustomField>
    <fullName>isCPQ_Active_User_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCPQ_Active_User__c</label>
    <type>Checkbox</type>
</CustomField>