force-app/main/default/objects/Add_Quote__mdt/fields/isUpdateAssetActiveUser_c__c.field-meta.xml
<CustomField>
    <fullName>isUpdateAssetActiveUser_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpdateAssetActiveUser__c</label>
    <type>Checkbox</type>
</CustomField>