force-app/main/default/objects/Add_Quote__mdt/fields/UCC__c.field-meta.xml
<CustomField>
    <fullName>UCC__c</fullName>
    <label>UCC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>